[package]
name = "block_chain_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
hex = "0.4"

[[bin]]
name = "ec_gen_by_hash"
path = "src/ec_gen_by_hash.rs"

[[bin]]
name = "ec_sign"
path = "src/ec_sign.rs"