[package]
name = "block_chain_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
hex = "0.4"
rand = "0.8"

[[bin]]
name = "ec_gen_by_hash"
path = "src/ec_gen_by_hash.rs"

[[bin]]
name = "ec_sign"
path = "src/ec_sign.rs"

[[bin]]
name = "ec_ecdh"
path = "src/ec_ecdh.rs"

[[bin]]
name = "ssl_aes"
path = "src/ssl_aes.rs"